Feat: AvatarComponent and test config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,13 @@
       }
     ],
     "paths": {
+      "@components/*": ["./src/components/*"],
       "@contexts/*": ["./src/contexts/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@interfaces/*": ["./src/interfaces/*"],
       "@pages/*": ["./src/pages/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@tests/*": ["./src/__tests__/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
