Feat: Create Header compound

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@compounds/*": ["./src/compounds/*"],
       "@contexts/*": ["./src/contexts/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@interfaces/*": ["./src/interfaces/*"],
