--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@hooks/*": ["./src/hooks/*"],
       "@interfaces/*": ["./src/interfaces/*"],
       "@pages/*": ["./src/pages/*"],
+      "@services/*": ["./src/services/*"],
       "@styles/*": ["./src/styles/*"],
       "@tests/*": ["./src/__tests__/*"]
     }
