--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
-    "styled-components": "^6.0.4",
-    "websocket": "^1.0.34"
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -33,7 +32,6 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
     "@types/testing-library__jest-dom": "^5.14.8",
-    "@types/websocket": "^1.0.5",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "typescript": "^5.1.6"
